--- a/public/index.html
+++ b/public/index.html
@@ -40,4 +40,28 @@
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
   </body>
+  <!-- The core Firebase JS SDK is always required and must be listed first -->
+  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-app.js"></script>
+
+  <!-- TODO: Add SDKs for Firebase products that you want to use
+      https://firebase.google.com/docs/web/setup#available-libraries -->
+  <script src="https://www.gstatic.com/firebasejs/7.24.0/firebase-analytics.js"></script>
+
+  <script>
+    // Your web app's Firebase configuration
+    // For Firebase JS SDK v7.20.0 and later, measurementId is optional
+    var firebaseConfig = {
+      apiKey: "AIzaSyC5PdcvDNBj85ezk-x2CymzbYAHyYrmOvs",
+      authDomain: "kitchengarden3199.firebaseapp.com",
+      databaseURL: "https://kitchengarden3199.firebaseio.com",
+      projectId: "kitchengarden3199",
+      storageBucket: "kitchengarden3199.appspot.com",
+      messagingSenderId: "726407829916",
+      appId: "1:726407829916:web:25742224b662a13b3c1059",
+      measurementId: "G-JGWE36VHER"
+    };
+    // Initialize Firebase
+    firebase.initializeApp(firebaseConfig);
+    firebase.analytics();
+  </script>
 </html>
